--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.23.5\n",
-      "pandas:      1.5.2\n",
+      "numpy:       1.23.3\n",
+      "pandas:      1.4.4\n",
       "PyTorch:      1.12.0\n"
      ]
     }
@@ -2473,6 +2473,185 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Containers\n",
+    "\n",
+    "参考博客: [详解PyTorch中的ModuleList和Sequential](https://zhuanlan.zhihu.com/p/75206669).\n",
+    "\n",
+    "`nn.Module`是所有网络的抽象基类，除了这个之外，pytorch还提供了几类封装模型的容器：\n",
+    "+ `nn.Sequential`：按照定义的顺序封装一系列的Modules\n",
+    "+ `nn.ModuleList`：以list的形式封装一系列的Modules\n",
+    "+ `nn.ModuleDict`：以OrderedDict的形式封装一系列的Modules——这个使用的场景不太多\n",
+    "\n",
+    "这里主要讨论 `nn.Sequential` 和 `nn.ModuleList` 的使用.\n",
+    "\n",
+    "这两者都是用于封装一系列的Modules，共同点如下：\n",
+    "1. 会记录定义Modules的顺序\n",
+    "2. 会将每个Module的参数注册到整个网络中\n",
+    "\n",
+    "不同点在于：\n",
+    "1. `nn.Sequential`除了按照定义的顺序封装Modules之外，还实现了`.forward()`方法，在里面自动按照定义的顺序，依次执行每个Module的`.forward()`方法，因此它要求前一个Module的输出shape和下一个Module输入的shape必须匹配\n",
+    "2. `nn.ModuleList`如名称所示，它只是对python list的一个扩展，封装一系列的Modules并注册其中的参数，也带有`.append(Module)`, `.extend(Modules)`等方法，但是除此之外，不会做其他的操作，特别是**没有实现`forward()`方法**，不会按照顺序调用每个Module，需要手动实现`forward()`方法，并自定义模型调用的过程\n",
+    "\n",
+    "总结下来，最大的区别，就是`nn.Sequential`是一个**完整的、可调用的网络**，但是`nn.ModuleList`只是一个Module的List，需要自己在`forward()`方法中实现具体的调用逻辑——更加灵活。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import OrderedDict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `nn.Sequential`使用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequential(\n",
+      "  (0): Conv2d(1, 20, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (1): ReLU()\n",
+      "  (2): Conv2d(20, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (3): ReLU()\n",
+      ")\n",
+      "Sequential(\n",
+      "  (conv1): Conv2d(1, 20, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (relu1): ReLU()\n",
+      "  (conv2): Conv2d(20, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (relu2): ReLU()\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 直接传入所有的 submodule，此时名称默认为0,1,2,3\n",
+    "seq = nn.Sequential(\n",
+    "    nn.Conv2d(1,20,5),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Conv2d(20,64,5),\n",
+    "    nn.ReLU()\n",
+    ")\n",
+    "print(seq)\n",
+    "\n",
+    "# 也可以用OrderedDict来自定义每一个 submodule 的名称\n",
+    "seq = nn.Sequential(OrderedDict([\n",
+    "    ('conv1', nn.Conv2d(1, 20, 5)),\n",
+    "    ('relu1', nn.ReLU()),\n",
+    "    ('conv2', nn.Conv2d(20, 64, 5)),\n",
+    "    ('relu2', nn.ReLU())\n",
+    "]))\n",
+    "print(seq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`nn.Sequential`是一个**完整的网络，可以直接使用**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([16, 64, 12, 12])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = torch.randn(16, 1, 20, 20)\n",
+    "\n",
+    "res1 = seq(input)\n",
+    "print(res1.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ `nn.ModuleList`使用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ModuleList(\n",
+      "  (0): Conv2d(1, 20, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (1): ReLU()\n",
+      "  (2): Conv2d(20, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (3): ReLU()\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "mod_list = nn.ModuleList([\n",
+    "    nn.Conv2d(1, 20, 5),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Conv2d(20, 64, 5),\n",
+    "    nn.ReLU()\n",
+    "])\n",
+    "print(mod_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "但是 `ModuleList` 不是一个完整的网络，没有实现`forward`方法："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "Module [ModuleList] is missing the required \"forward\" function",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m16\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m20\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m res2 \u001b[38;5;241m=\u001b[39m \u001b[43mmod_list\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mD:\\Miniconda3\\envs\\deep-learning\\lib\\site-packages\\torch\\nn\\modules\\module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1126\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1127\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1128\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1129\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1130\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1131\u001b[0m \u001b[38;5;66;03m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[38;5;241m=\u001b[39m [], []\n",
+      "File \u001b[1;32mD:\\Miniconda3\\envs\\deep-learning\\lib\\site-packages\\torch\\nn\\modules\\module.py:201\u001b[0m, in \u001b[0;36m_forward_unimplemented\u001b[1;34m(self, *input)\u001b[0m\n\u001b[0;32m    190\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_forward_unimplemented\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;28minput\u001b[39m: Any) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    191\u001b[0m     \u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Defines the computation performed at every call.\u001b[39;00m\n\u001b[0;32m    192\u001b[0m \n\u001b[0;32m    193\u001b[0m \u001b[38;5;124;03m    Should be overridden by all subclasses.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    199\u001b[0m \u001b[38;5;124;03m        registered hooks while the latter silently ignores them.\u001b[39;00m\n\u001b[0;32m    200\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 201\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModule [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] is missing the required \u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124mforward\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m function\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNotImplementedError\u001b[0m: Module [ModuleList] is missing the required \"forward\" function"
+     ]
+    }
+   ],
+   "source": [
+    "input = torch.randn(16, 1, 20, 20)\n",
+    "res2 = mod_list(input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-----------\n",
     "\n",
     "## 常用的神经网络模块-KEY"
@@ -2636,81 +2815,83 @@
     "\n",
     "+ `nn.Softmax(dim)`, 一般用于将多分类问题下，Linear层的输出转换成 **概率**.\n",
     "\n",
-    "+ `nn.LogSofrmax(dim)`，用于将多分类问题里 Linear 层的输出转换成 **对数概率**.\n",
+    "+ `nn.LogSoftmax(dim)`，用于将多分类问题里 Linear 层的输出转换成 **对数概率**.\n",
     "\n",
     "`dim`参数指定计算的轴维度。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.1051, -0.6662, -1.5944,  1.7258, -1.1150],\n",
-       "        [-1.9155, -0.5558,  1.1335, -0.5306, -1.0881],\n",
-       "        [-0.2570, -0.6757, -0.7405, -0.3356, -0.2761],\n",
-       "        [ 1.0059, -0.0551,  0.2353,  0.7235, -0.1148]])"
+       "tensor([[-0.9589,  0.0507,  0.9370],\n",
+       "        [ 0.7688,  1.4061,  0.3947]])"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = torch.randn(4, 5)\n",
+    "X = torch.randn(2, 3)\n",
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[0.1191, 0.0679, 0.0268, 0.7428, 0.0434],\n",
-       "        [0.0310, 0.1207, 0.6536, 0.1238, 0.0709],\n",
-       "        [0.2392, 0.1574, 0.1475, 0.2212, 0.2347],\n",
-       "        [0.3462, 0.1198, 0.1602, 0.2610, 0.1129]])"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res:\n",
+      " tensor([[0.0961, 0.2638, 0.6400],\n",
+      "        [0.2794, 0.5284, 0.1922]])\n",
+      "\n",
+      "res.sum(dim=1):\n",
+      " tensor([1.0000, 1.0000])\n"
+     ]
     }
    ],
    "source": [
     "softmax = nn.Softmax(dim=1)\n",
-    "softmax(X)"
+    "res = softmax(X)\n",
+    "print('res:\\n', res)\n",
+    "print()\n",
+    "print('res.sum(dim=1):\\n', res.sum(dim=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[-2.1282, -2.6893, -3.6175, -0.2973, -3.1382],\n",
-       "        [-3.4741, -2.1144, -0.4252, -2.0892, -2.6468],\n",
-       "        [-1.4303, -1.8490, -1.9138, -1.5089, -1.4494],\n",
-       "        [-1.0608, -2.1219, -1.8315, -1.3433, -2.1815]])"
-      ]
-     },
-     "execution_count": 194,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "res:\n",
+      " tensor([[-2.3421, -1.3325, -0.4462],\n",
+      "        [-1.2752, -0.6379, -1.6492]])\n",
+      "\n",
+      "res.sum(dim=1):\n",
+      " tensor([-4.1207, -3.5623])\n"
+     ]
     }
    ],
    "source": [
     "logsoft = nn.LogSoftmax(dim=1)\n",
-    "logsoft(X)"
+    "res = logsoft(X)\n",
+    "print('res:\\n', res)\n",
+    "print()\n",
+    "print('res.sum(dim=1):\\n', res.sum(dim=1))"
    ]
   },
   {
@@ -2719,12 +2900,15 @@
    "source": [
     "### CNN相关\n",
     "\n",
+    "CNN里卷积层的操作可视化可以参考 [Convolution arithmetic](https://github.com/vdumoulin/conv_arithmetic/blob/master/README.md).\n",
+    "\n",
     "+ 卷积层  \n",
     "`nn.Conv2d(in_channels, out_channels, kernel_size, stride=1, padding=0, dilation=1, groups=1, bias=True, padding_mode='zeros')` .  \n",
     "这里不能指定卷积核，只能指定卷积核的`kernel_size`\n",
     "\n",
     "\n",
-    "+ 偏置项\n",
+    "+ 转置卷积层  \n",
+    "`nn.ConvTranspose2d(in_channels, out_channels, kernel_size, stride=1, padding=0, output_padding=0, groups=1, bias=True, dilation=1, padding_mode='zeros', device=None, dtype=None)`\n",
     "\n",
     "\n",
     "+ 池化层  \n",
@@ -2733,55 +2917,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[[[ 0.,  1.,  2.,  3.],\n",
-       "         [ 4.,  5.,  6.,  7.],\n",
-       "         [ 8.,  9., 10., 11.],\n",
-       "         [12., 13., 14., 15.]],\n",
-       "\n",
-       "        [[16., 17., 18., 19.],\n",
-       "         [20., 21., 22., 23.],\n",
-       "         [24., 25., 26., 27.],\n",
-       "         [28., 29., 30., 31.]],\n",
-       "\n",
-       "        [[32., 33., 34., 35.],\n",
-       "         [36., 37., 38., 39.],\n",
-       "         [40., 41., 42., 43.],\n",
-       "         [44., 45., 46., 47.]]],\n",
-       "\n",
-       "\n",
-       "       [[[48., 49., 50., 51.],\n",
-       "         [52., 53., 54., 55.],\n",
-       "         [56., 57., 58., 59.],\n",
-       "         [60., 61., 62., 63.]],\n",
-       "\n",
-       "        [[64., 65., 66., 67.],\n",
-       "         [68., 69., 70., 71.],\n",
-       "         [72., 73., 74., 75.],\n",
-       "         [76., 77., 78., 79.]],\n",
-       "\n",
-       "        [[80., 81., 82., 83.],\n",
-       "         [84., 85., 86., 87.],\n",
-       "         [88., 89., 90., 91.],\n",
-       "         [92., 93., 94., 95.]]]], dtype=float32)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 4, 5])\n"
+     ]
     }
    ],
    "source": [
     "# 输入的是 2张 4x4x3 的图片，这里为了容易辨别，将通道数3提前了一点\n",
-    "imgs = np.arange(2*4*4*3,dtype=np.float32).reshape((2,3,4,4))\n",
+    "imgs = np.arange(2*4*5*3, dtype=np.float32).reshape((2, 3, 4, 5))\n",
     "imgs_tensor = torch.tensor(imgs)\n",
-    "display(imgs)"
+    "# display(imgs)\n",
+    "print(imgs_tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 2, 3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "cov2d = nn.Conv2d(in_channels=3, out_channels=2, kernel_size=(2, 2), stride=(1, 1), padding=(0, 0))\n",
+    "res = cov2d(imgs_tensor)\n",
+    "print(res.shape)"
    ]
   },
   {
@@ -3397,7 +3570,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### dropout层\n",
     "\n",
@@ -7016,7 +7191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Deep-Learning",
+   "display_name": "Deep-Learning-Env",
    "language": "python",
    "name": "deep-learning"
   },
